{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "GameInput",
            "id": "c68da317-131f-4f0b-9347-904331dc1ccc",
            "actions": [
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "34fb4603-0288-4f44-becf-13a47cc64c20",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fc95a098-9069-467c-8f66-dd1982c603ff",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ecd545ad-9ca9-49b1-9faa-88797c83ffb7",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}